--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "private": true,
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
+        "start": "NODE_OPTIONS=--openssl-legacy-provider && ng serve",
+        "build": "NODE_OPTIONS=--openssl-legacy-provider && ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
         "lint": "ng lint"
