--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
                             "crypto-js/enc-base64"
                         ],
                         "assets": [
+                            "assets",
                             "src/favicon-16x16.png",
                             "src/favicon-32x32.png",
                             "src/assets",
