--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@angular/platform-browser": "12.2.1",
         "@angular/platform-browser-dynamic": "12.2.1",
         "@angular/router": "12.2.1",
+        "@findeth/abi": "^0.7.1",
         "@fullcalendar/angular": "4.4.5-beta",
         "@fullcalendar/core": "4.4.2",
         "@fullcalendar/daygrid": "4.4.2",
@@ -36,17 +37,22 @@
         "@metamask/detect-provider": "^1.2.0",
         "@metamask/providers": "^8.1.1",
         "@ngneat/transloco": "2.22.0",
+        "@types/react": "^17.0.38",
+        "@walletconnect/web3-provider": "^1.7.1",
+        "abi-decoder": "^2.4.0",
         "apexcharts": "3.27.3",
         "assert": "^2.0.0",
         "crypto-js": "3.3.0",
         "eth-sig-util": "^3.0.1",
         "ethereumjs-util": "^7.1.3",
         "highlight.js": "11.2.0",
+        "https-browserify": "^1.0.0",
         "lodash-es": "4.17.21",
         "moment": "2.29.1",
         "ng-apexcharts": "1.5.12",
         "ngx-markdown": "12.0.1",
         "ngx-quill": "14.2.0",
+        "os-browserify": "^0.3.0",
         "perfect-scrollbar": "1.5.2",
         "process": "^0.11.10",
         "quill": "1.3.7",
@@ -54,8 +60,12 @@
         "rxjs": "6.6.7",
         "stream": "^0.0.2",
         "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
         "tslib": "2.3.1",
         "web-animations-js": "2.3.2",
+        "web3": "^1.7.0",
+        "web3-eth-abi": "^1.7.0",
+        "web3modal": "^1.9.5",
         "zone.js": "0.11.4"
     },
     "devDependencies": {
