--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@fuse/starter",
+    "name": "CryptoArk",
     "version": "13.5.0",
-    "description": "Fuse - Angular Admin Template and Starter Project",
+    "description": "CryptoArk",
     "author": "https://themeforest.net/user/srcn",
     "license": "https://themeforest.net/licenses/standard",
     "private": true,
