--- a/angular.json
+++ b/angular.json
@@ -46,6 +46,7 @@
                             "src/favicon-16x16.png",
                             "src/favicon-32x32.png",
                             "src/metamaskIcon.png",
+                            "src/boat.png",
                             "src/assets",
                             {
                                 "glob": "_redirects",
@@ -131,6 +132,7 @@
                             "src/favicon-16x16.png",
                             "src/favicon-32x32.png",
                             "src/metamaskIcon.png",
+                            "src/boat.png",
                             "src/assets"
                         ],
                         "styles": [
